--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,17 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+/* Scrollbar styles */
+.scrollbar::-webkit-scrollbar {
+          width: 10px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+          background: #222244;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+          background-color: #635ee3 ;
+          border-radius: 60px;
+}
